# sim2sim_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: OnnxRuntime.cmake
config/: template_config.yaml
include/: RobotDefinition.hpp  RobotStates.hpp
include/Controller/OnnxParser/: OnnxPolicy.cpp  OnnxPolicy.hpp
include/Interface/MuJoCo/: MuJoCoSimulationBridge.cpp  MuJoCoSimulationBridge.hpp  Simulate.cc  Simulate.h  SimulationInterface.cpp  SimulationInterface.hpp  traj_viz_util.hpp
include/StateMachine/: FSM_Template.cpp  FSM_Template.hpp  FSM_template.cpp  FSM_template.hpp  StateMachineCtrl.cpp  StateMachineCtrl.hpp  States.hpp
model/: prismatic_pointfoot.xml  scene.xml
scripts/: create_FSM_task.py
src/: RobotStates.cpp  main.cpp
